app/javascript/flavours/polyam/styles/components/status.scss
/* ... */
.focusable {
  &:focus {
    outline: 0;
    background: rgba($ui-highlight-color, 0.05);
  }
}

.status {
  padding: 10px 14px; // glitch: reduced padding
  min-height: 54px;
  border-bottom: 1px solid var(--background-border-color);
  cursor: auto;

  @keyframes fade {
    0% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }

  opacity: 1;
  animation: fade 150ms linear;

  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list {
    margin-top: 8px; // glitch: reduced margins
  }

  &.light {
    .status__relative-time,
    .status__visibility-icon {
      color: $light-text-color;
    }

    .status__display-name {
      color: $inverted-text-color;
    }

    .display-name {
      color: $light-text-color;

      strong {
        color: $inverted-text-color;
      }
    }

    .status__content {
      color: $inverted-text-color;

      a {
        color: $highlight-text-color;
      }

      &__spoiler-link {
        color: $primary-text-color;
        background: $ui-primary-color;

        &:hover,
        &:focus {
          background: lighten($ui-primary-color, 8%);
        }
      }
    }
  }

  &--in-thread {
    $thread-margin: 46px + 10px;

    border-bottom: 0;

    .status__content,
    .status__action-bar {
      margin-inline-start: $thread-margin;
      width: calc(100% - ($thread-margin));
    }

    .status__content__read-more-button {
      margin-inline-start: $thread-margin;
    }
  }

  &--first-in-thread {
    border-top: 1px solid lighten($ui-base-color, 8%);
  }

  &__line {
    height: 10px - 4px;
    border-inline-start: 2px solid lighten($ui-base-color, 8%);
    width: 0;
    position: absolute;
    top: 0;
    inset-inline-start: 14px + ((46px - 2px) * 0.5);

    &--full {
      top: 0;
      height: 100%;

      &::before {
        content: '';
        display: block;
        position: absolute;
        top: 10px - 4px;
        height: 46px + 4px + 4px;
        width: 2px;
        background: $ui-base-color;
        inset-inline-start: -2px;
      }
    }

    &--first {
      top: 10px + 46px + 4px;
      height: calc(100% - (10px + 46px + 4px));

      &::before {
        display: none;
      }
    }
  }

  &.collapsed {
    background-position: center;
    background-size: cover;
    user-select: none;
    min-height: 0;

    &.has-background::before {
      display: block;
      position: absolute;
      inset-inline-start: 0;
      inset-inline-end: 0;
      top: 0;
      bottom: 0;
      background-image: linear-gradient(
        to bottom,
        rgba($base-shadow-color, 0.75),
        rgba($base-shadow-color, 0.65) 24px,
        rgba($base-shadow-color, 0.8)
      );
      pointer-events: none;
      content: '';
    }

    .display-name:hover .display-name__html {
      text-decoration: none;
    }

    .status__content {
      height: 20px;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-top: 0;

      &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        inset-inline-start: 0;
        inset-inline-end: 0;
        background: linear-gradient(
          rgba($ui-base-color, 0),
          rgba($ui-base-color, 1)
        );
        pointer-events: none;
      }

      a:hover {
        text-decoration: none;
      }

      // Polyam extra change for backgrounds of code blocks
      pre,
      code {
        padding: 0;
      }
    }

    &:focus > .status__content::after {
      background: linear-gradient(
        rgba(lighten($ui-base-color, 4%), 0),
        rgba(lighten($ui-base-color, 4%), 1)
      );
    }

    &.status-direct > .status__content::after {
      background: linear-gradient(
        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 0),
        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 1)
      );
    }
  }

  // Polyam: Reactions
  .reactions-bar--empty {
    display: none;
  }
}

.status__wrapper.collapsed {
  .notification__message {
    margin-bottom: 0;
    white-space: nowrap;
  }
}

.status__relative-time {
  display: block;
  font-size: 14px;
  color: $dark-text-color;
  text-align: end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.status__display-name {
  color: $dark-text-color;
}

.status__info .status__display-name {
  max-width: 100%;
  display: flex;
  font-size: 15px;
  line-height: 22px;
  align-items: center;
  gap: 10px;
  overflow: hidden;

  .display-name {
    bdi {
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &__account {
      white-space: nowrap;
      display: block;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.status__info {
  font-size: 15px;
  padding-bottom: 10px;
  display: flex;
  align-items: start; // glitch: changed because of our different layout
  justify-content: space-between;
  gap: 10px;
  cursor: pointer;
}

.status__info__icons {
  display: flex;
  align-items: center;
  height: 1em;
  color: $action-button-color;
  gap: 4px;

  // Polyam: Different class as otherwise doesn't apply to collapse icon
  .icon {
    width: 16px;
    height: 16px;
  }

  // Polyam: Temporary fix for language icon
  .text-icon {
    font-weight: 600;
  }
}

.status__collapse-button.active > .icon {
  transform: rotate(-180deg);
}

.no-reduce-motion .status__collapse-button {
  &.activate {
    & > .icon {
      animation: spring-flip-in 1s linear;
    }
  }

  &.deactivate {
    & > .icon {
      animation: spring-flip-out 1s linear;
    }
  }
}
/* ... */

